# RapportsJurysRAG

./: .env.exemple  .gitignore  README.md  app.ipynb  populateVectorDB.ipynb  pyproject.toml  requirements.txt
